tests/rosetta/out/Smalltalk/archimedean-spiral.out
/tmp/archimedean-spiral.st:8: parse error, expected ']'
