tests/rosetta/out/Smalltalk/archimedean-spiral.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| PI sinApprox term sum n denom cosApprox degreesIncr turns stop width centre a b theta count r x y |
PI := 3.141592653589793.
sinApprox := [:x | term := x.
sum := x.
n := 1.
[(n <= 10)] whileTrue: [.
denom := (((2 * n)) * ((((2 * n)) + 1))) asFloat.
term := (((((-term * x)) * x)) / denom).
sum := (sum + term).
n := (n + 1).
].
.
sum. ].
cosApprox := [:x | term := 1.
sum := 1.
n := 1.
[(n <= 10)] whileTrue: [.
denom := (((((2 * n)) - 1)) * ((2 * n))) asFloat.
term := (((((-term * x)) * x)) / denom).
sum := (sum + term).
n := (n + 1).
].
.
sum. ].
degreesIncr := (((0.1 * PI)) / 180).
turns := 2.
stop := (((((360 * turns)) * 10)) * degreesIncr).
width := 600.
centre := (width / 2).
a := 1.
b := 20.
theta := 0.
count := 0.
[(theta < stop)] whileTrue: [.
r := (a + ((b * theta))).
x := (r * (cosApprox value: theta)).
y := (r * (sinApprox value: theta)).
((((count % 100)) = 0)) ifTrue: [
Transcript show: (((((((centre + x) asString)) + ',')) + (((centre - y) asString)))) printString; cr.
] .
theta := (theta + degreesIncr).
count := (count + 1).
].
.
